[gd_scene load_steps=7 format=3 uid="uid://djpt27ldofduc"]

[ext_resource type="Script" path="res://code/Player.gd" id="1_0l28j"]
[ext_resource type="PackedScene" uid="uid://dyhk34bvr5waa" path="res://scenes/health_component.tscn" id="2_xcg1h"]
[ext_resource type="Texture2D" uid="uid://4hnptyj0gk8p" path="res://art/heart.png" id="3_j71rn"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_jjqv4"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_epqpa"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="BoxShape3D" id="BoxShape3D_t3l6c"]
size = Vector3(0.529686, 1.1503, 0.853522)

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_0l28j")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.24734, 0)
mesh = SubResource("CapsuleMesh_jjqv4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.24734, 0)
shape = SubResource("ConvexPolygonShape3D_epqpa")

[node name="Head" type="Node3D" parent="."]

[node name="Camera" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 0.971421, -0.237364, 0, 0.237364, 0.971421, 0, 1.39849, 0)

[node name="TargetArea" type="Area3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/TargetArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.676116, -0.000169277)
shape = SubResource("BoxShape3D_t3l6c")

[node name="HealthComponent" parent="." instance=ExtResource("2_xcg1h")]
starting_health = 3

[node name="Heart" type="Sprite2D" parent="."]
position = Vector2(4, 4)
texture = ExtResource("3_j71rn")

[node name="Heart2" type="Sprite2D" parent="."]
position = Vector2(12, 4)
texture = ExtResource("3_j71rn")

[node name="Heart3" type="Sprite2D" parent="."]
position = Vector2(20, 4)
texture = ExtResource("3_j71rn")

[connection signal="die" from="HealthComponent" to="." method="_on_health_component_die"]
[connection signal="take_damage" from="HealthComponent" to="." method="_on_health_component_take_damage"]
